<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_name"
            android:textSize="18sp"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview_devicename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_address"
            android:textSize="18sp"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview_deviceaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:textSize="18sp"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            android:textSize="18sp"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_readchara1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chara1"
            android:textSize="18sp"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview_readchara1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_readchara2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chara2"
            android:textSize="18sp"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview_readchara2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_notifychara1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chara1_notify"
            android:textSize="18sp"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview_notifychara1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>
</LinearLayout>